k8s/ingress-nginx/choitet.ga/ingress-serivce.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "wildcard-cluster-issuer"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx     
    ingress.kubernetes.io/rewrite-target: /     
    #nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.choitet.ga' ) {
        rewrite ^ https://choitet.ga$request_uri permanent;
        }
spec:
  rules:
  - host: www.choitet.ga
    http:
      paths:
      - backend:
          service:
            name: demo-nodejs-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: choitet.ga
    http:
      paths:
      - backend:
          service:
            name: demo-nodejs-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: develop.choitet.ga
    http:
      paths:
      - backend:
          service:
            name: demo-nodejs-develop-service
            port:
              number: 3000
        path: /
        pathType: Prefix   
  - host: monitor.choitet.ga
    http:
      paths:
      - backend:
          service:
            name: grafana-service-extenal
            port:
              number: 80
        path: /
        pathType: Prefix

  tls:
  - hosts:
    - www.choitet.ga
    - choitet.ga
    - monitor.choitet.ga
    - develop.choitet.ga
    secretName: choitet.ga-certificate-secret
